# 4xSimulation

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  ReadMe.md  SConstruct  binary_network_server.py  combat_test.txt  host_server.sh  init.txt
data/: game_types.py  network_definitions.py  store.py
include/: Vector2.hpp  Vector3.hpp  ai_barbarians.h  ai_decision_store.h  ai_decisions.h  ai_empire_decisions.h  ai_empire_evaluations.h  ai_empire_trees.h  ai_evaluations.h  ai_evaluator_store.h  ai_monster.h  ai_neural_net.h  ai_shared.h  ai_state.h  ai_unit_decisions.h  ai_unit_evaluations.h  ai_unit_trees.h  city.h  combat.h  custom_math.h  dtree.h  entity.h  entity_ids.h  entity_types.h  file_reader.h  format.h  hex.h  improvement.h  improvements.h  magic.h  notification.h  player.h  production.h  production_detail.h  random.h  resources.h  scenario.h  scenario_arena.h  scenario_citylife.h  scenario_faceoff.h  (+18 more)
src/: CMakeLists.txt  SConscript  ai_barbarians.cpp  ai_decision_store.cpp  ai_decisions.cpp  ai_empire_decisions.cpp  ai_empire_evaluations.cpp  ai_empire_trees.cpp  ai_evaluations.cpp  ai_evaluator_store.cpp  ai_monster.cpp  ai_neural_net.cpp  ai_shared.cpp  ai_state.cpp  ai_unit_decisions.cpp  ai_unit_evaluations.cpp  ai_unit_trees.cpp  city.cpp  combat.cpp  dtree.cpp  entity.cpp  entity_types.cpp  file_reader.cpp  format.cpp  hex.cpp  improvement.cpp  improvements.cpp  magic.cpp  main.cpp  notification.cpp  player.cpp  production.cpp  random.cpp  resources.cpp  scenario.cpp  scenario_arena.cpp  scenario_citylife.cpp  scenario_faceoff.cpp  scenario_monster.cpp  science.cpp  (+16 more)
src/console/: main.cpp  step_parser.cpp  terminal.cpp
src/learn/: main.cpp  simulation_interface.cpp  simulation_interface.h
test/: ecs_templates.cpp  entity.cpp  entity.h  entity.hpp  main.c
tests/: test_production.cpp
tools/: author.py  bin_size.py  combat_table.py  cpp_ext.py  cpp_out.py  fuzz.py  serialization.py  togame.py  type_decl.py  type_generator.py
